add new website from server na

--- a/xem-phim-bo/khi-em-chay-ve-moi-thoi-khong/index.html
+++ b/xem-phim-bo/khi-em-chay-ve-moi-thoi-khong/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1701,18 +1701,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/than-toc" title="Thần tốc">
+          <a class="list-top-movie-link" href="/phim-moi/gai-hu-pha-dam-cuoi" title="Gái Hư Phá Đám Cưới">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-toc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gai-hu-pha-dam-cuoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thần tốc
+             Gái Hư Phá Đám Cưới
             </span>
             <span class="list-top-movie-item-en">
-             Faster
+             Bad Sister
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chiem-huu" title="Chiếm hữu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chiem-huu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chiếm hữu
+            </span>
+            <span class="list-top-movie-item-en">
+             Only Mine
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bai-toan-3-vat-the" title="Bài toán 3 vật thể">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bai-toan-3-vat-the-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bài toán 3 vật thể
+            </span>
+            <span class="list-top-movie-item-en">
+             3 Body Problem
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1723,21 +1767,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bilocation" title="Bilocation">
+          <a class="list-top-movie-link" href="/phim-moi/giai-cuu-con-tin-2" title="Giải Cứu Con Tin">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bilocation-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giai-cuu-con-tin-2014-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bilocation
+             Giải Cứu Con Tin
             </span>
             <span class="list-top-movie-item-en">
-             Bilocation
+             The Target
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1745,65 +1789,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-di-tim-vo-cuc" title="Người Đi Tìm Vô Cực">
+          <a class="list-top-movie-link" href="/phim-moi/ma-thoi-den-van-nam-trung-coc" title="Ma Thổi Đèn: Vân Nam Trùng Cốc">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-di-tim-vo-cuc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-thoi-den-van-nam-trung-coc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Đi Tìm Vô Cực
+             Ma Thổi Đèn: Vân Nam Trùng Cốc
             </span>
             <span class="list-top-movie-item-en">
-             The Man Who Knew Infinity
+             Candle in the Tomb: The Worm Valley
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/muoi-sau-ngon-nen" title="Mười Sáu Ngọn Nến">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/muoi-sau-ngon-nen-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mười Sáu Ngọn Nến
-            </span>
-            <span class="list-top-movie-item-en">
-             Sixteen Candles
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-tham-bat-hoi-tai-ai-nan-vi" title="Tình Thâm Bất Hối Tái Ái Nan Vi">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-tham-bat-hoi-tai-ai-nan-vi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tình Thâm Bất Hối Tái Ái Nan Vi
-            </span>
-            <span class="list-top-movie-item-en">
-             情深不悔，再爱难为
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
